# Marca

./: .gitignore  Cargo.toml  FREEZE_ANALYSIS.md  README.md  build.rs  cargo-sources.json  io.github.simoonas.marca.desktop  io.github.simoonas.marca.json  test_focus.rs  test_input_sender.rs
.github/workflows/: ci.yml
data/: com.marca.app.gschema.xml  gschemas.compiled  io.github.simoonas.marca.desktop  io.github.simoonas.marca.gschema.xml  io.github.simoonas.marca.metainfo.xml
src/: app.rs  fetch_favicon.rs  fetch_metadata.rs  main.rs  main.rs.test
src/components/: bookmark_edit_dialog.rs  bookmark_list_item.rs  bookmark_row.rs  hotkey_display.rs  mod.rs  settings_dialog.rs  tag_row.rs  welcome_dialog.rs
src/db/: import.rs  mod.rs  models.rs  queries.rs  schema.rs  seed.rs
src/fixtures/: mod.rs  sample_data.rs
src/import/: html.rs  json.rs
tests/: bookmarks.html  test_sender.rs
