[package]
name = "marca"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
relm4 = { version = "0.10", features = ["libadwaita"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
serde_json = "1.0"
readability = { version = "0.3", features = ["reqwest"] }
tokio = { version = "1", features = ["rt"] }
scraper = "0.21"
url = "2.5"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
murmur3 = "0.5"
